# simple_rag

./: .gitignore  pyproject.toml  rag.ipynb  requirements.txt
data/text_files/: text.txt  text2.txt
data/vector_store/: chroma.sqlite3
