[project]
name = "rag"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "chromadb>=1.5.9",
    "faiss-cpu>=1.14.2",
    "langchain>=1.3.2",
    "langchain-community>=0.4.2",
    "langchain-core>=1.4.0",
    "pymupdf>=1.27.2.3",
    "pypdf>=6.12.2",
    "scikit-learn>=1.8.0",
    "sentence-transformers>=5.5.1",
]

[dependency-groups]
dev = [
    "ipykernel>=7.2.0",
]
